--- a/HTML e CSS3 _ Parte 1/style.css
+++ b/HTML e CSS3 _ Parte 1/style.css
@@ -1,10 +1,20 @@
 
 
 body{
-    background: #cccccc;
+   
 
 }
-h1{
+.titulo_principal{
+  padding-left: 20px;
+}
+#banner {
+ width: 100%;
+}
+.principal{
+  background: #cccccc;
+  padding: 30px;
+}
+.titulo_centralizado{
     text-align: center;
 }
 p {
@@ -17,3 +27,20 @@ p {
     color: red;
     font-size: 20px;
 }  
+.itens{
+  font-style: italic;
+}
+.beneficios{
+  background: white;
+  padding: 20px;
+}
+
+ul{
+  display: inline-block;
+  vertical-align: top;
+  width: 20%;
+  margin-right: 15%;
+}
+.imagem_beneficio{
+  width: 50%;
+}
