Adicionando rodapé na página

--- a/HTML e CSS3 _ Parte 1/produtos.css
+++ b/HTML e CSS3 _ Parte 1/produtos.css
@@ -67,3 +67,12 @@ border-color: blueviolet;
     font-weight: bold;
     margin-top: 10px;
 }
+footer{
+    text-align: center;
+    background: url("imagens/bg.jpg");
+}
+.copy{
+    color: antiquewhite;
+    font-size: 13px;
+    margin-top: 20px;
+}
