--- a/HTML e CSS3 _ Parte 1/style.css
+++ b/HTML e CSS3 _ Parte 1/style.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
 header{
     background: grey;
     padding: 20px 0;
@@ -77,8 +81,7 @@ footer{
     margin-top: 20px;
 }
 main{
-    width: 940px;
-    margin: 0 auto;
+
 }
 form{
     margin: 40px 0;
@@ -126,4 +129,100 @@ thead{
 td , th{
     border: 1px solid black;
     padding: 8px 15px;
+}
+.banner{
+    width: 100%;
+}
+.titulo-principal{
+text-align: center;
+font-size: 2em;
+margin: 1em;
+clear: left;
+
+}
+.principal{
+    padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
+
+}
+.principal p {
+    margin: 0 0 1em;
+}
+.principal strong {
+    font-weight: bold;
+}
+.utensilios{
+    width: 150px;
+    float: left;
+    margin: 0 12px 12px 0;
+}
+.mapa{
+    padding: 3em 0;
+    background: linear-gradient(#FEFEFE , #888888);
+
+}
+.mapa-conteudo{
+    width: 940px;
+    margin: 0 auto;
+}
+.mapa p{
+    text-align: center;
+    margin: 0 0 2em;
+}
+.beneficios{
+    padding: 3em 0;
+    background: #888888;
+  
+}
+.conteudo-beneficios{
+    width: 640px;
+    margin: 0 auto;
+}
+.lista-beneficios{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+.itens{
+    line-height: 1.5;
+}
+.itens:first-child{
+    font-weight: bold;
+}
+.itens::before{
+    content: "★";
+}
+.imagem-beneficios{
+ width: 60%;
+ opacity: 1;
+ transition: 400ms;
+ box-shadow: 10px 10px 5px #000000;
+
+}
+.imagem-beneficios:hover{
+ opacity: 0.3;
+}
+.principal em {
+    font-style: italic;
+}
+
+.video{
+    width: 560px;
+    margin: 2em auto;
+}
+@media screen and (max-width: 480px){
+    .caixa , .principal , .conteudo-beneficios , .mapa-conteudo , .video{
+        width: auto;
+    }
+    h1{
+        text-align: center;
+    }
+    nav{
+        position: static;
+    }
+    .lista-beneficios , .imagem-beneficios{
+        width: 100%;
+    }
 }
